// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`checkboxes 1`] = `
{
  "content": "# Housework

## Main

- [x] Dishes
- [ ] Cleaning the bathroom
- [x] Change the light bulbs
- [ ] something else

## [x] should it works on titles?

## [x] idk if it should!

### [ ] test

### [x] test

- [x] test
- [x] test


## [x] only works on list items is better
\`\`\`
[ ] this is not a checkbox either
\`\`\`
",
  "features": {
    "hljs": true,
  },
  "parserOptions": undefined,
  "root": {
    "children": [
      {
        "children": [
          {
            "children": [],
            "content": "<svg width="16" height="16" viewBox="0 -3 24 24"><path d="M19 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2m-9 14-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"/></svg> Dishes",
            "payload": {
              "lines": "4,5",
              "tag": "li",
            },
          },
          {
            "children": [],
            "content": "<svg width="16" height="16" viewBox="0 -3 24 24"><path fill-rule="evenodd" d="M6 5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V6a1 1 0 0 0-1-1zM3 6a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3v-5z" clip-rule="evenodd"/></svg> Cleaning the bathroom",
            "payload": {
              "lines": "5,6",
              "tag": "li",
            },
          },
          {
            "children": [],
            "content": "<svg width="16" height="16" viewBox="0 -3 24 24"><path d="M19 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2m-9 14-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"/></svg> Change the light bulbs",
            "payload": {
              "lines": "6,7",
              "tag": "li",
            },
          },
          {
            "children": [],
            "content": "<svg width="16" height="16" viewBox="0 -3 24 24"><path fill-rule="evenodd" d="M6 5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V6a1 1 0 0 0-1-1zM3 6a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3v-5z" clip-rule="evenodd"/></svg> something else",
            "payload": {
              "lines": "7,9",
              "tag": "li",
            },
          },
        ],
        "content": "Main",
        "payload": {
          "lines": "2,3",
          "tag": "h2",
        },
      },
      {
        "children": [],
        "content": "<svg width="16" height="16" viewBox="0 -3 24 24"><path d="M19 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2m-9 14-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"/></svg> should it works on titles?",
        "payload": {
          "lines": "9,10",
          "tag": "h2",
        },
      },
      {
        "children": [
          {
            "children": [],
            "content": "<svg width="16" height="16" viewBox="0 -3 24 24"><path fill-rule="evenodd" d="M6 5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V6a1 1 0 0 0-1-1zM3 6a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3v-5z" clip-rule="evenodd"/></svg> test",
            "payload": {
              "lines": "13,14",
              "tag": "h3",
            },
          },
          {
            "children": [
              {
                "children": [],
                "content": "<svg width="16" height="16" viewBox="0 -3 24 24"><path d="M19 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2m-9 14-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"/></svg> test",
                "payload": {
                  "lines": "17,18",
                  "tag": "li",
                },
              },
              {
                "children": [],
                "content": "<svg width="16" height="16" viewBox="0 -3 24 24"><path d="M19 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2m-9 14-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"/></svg> test",
                "payload": {
                  "lines": "18,21",
                  "tag": "li",
                },
              },
            ],
            "content": "<svg width="16" height="16" viewBox="0 -3 24 24"><path d="M19 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2m-9 14-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"/></svg> test",
            "payload": {
              "lines": "15,16",
              "tag": "h3",
            },
          },
        ],
        "content": "<svg width="16" height="16" viewBox="0 -3 24 24"><path d="M19 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2m-9 14-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"/></svg> idk if it should!",
        "payload": {
          "lines": "11,12",
          "tag": "h2",
        },
      },
      {
        "children": [
          {
            "children": [],
            "content": "<pre data-lines="22,25"><code data-lines="22,25"><span class="hljs-string">[ ]</span> <span class="hljs-keyword">this</span> <span class="hljs-keyword">is</span> <span class="hljs-keyword">not</span> a checkbox either
</code></pre>",
            "payload": {
              "lines": "22,25",
              "tag": "pre",
            },
          },
        ],
        "content": "<svg width="16" height="16" viewBox="0 -3 24 24"><path d="M19 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2m-9 14-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"/></svg> only works on list items is better",
        "payload": {
          "lines": "21,22",
          "tag": "h2",
        },
      },
    ],
    "content": "Housework",
    "payload": {
      "lines": "0,1",
      "tag": "h1",
    },
  },
}
`;

exports[`content with frontmatter 1`] = `
{
  "content": "---
markmap:
  color: blue
---

- l1
  - l1.1
  - l1.2
    - l1.2.1
",
  "features": {},
  "frontmatter": {
    "markmap": {
      "color": [
        "blue",
      ],
    },
  },
  "frontmatterInfo": {
    "lines": 4,
    "offset": 31,
  },
  "parserOptions": {},
  "root": {
    "children": [
      {
        "children": [],
        "content": "l1.1",
        "payload": {
          "lines": "6,7",
          "tag": "li",
        },
      },
      {
        "children": [
          {
            "children": [],
            "content": "l1.2.1",
            "payload": {
              "lines": "8,9",
              "tag": "li",
            },
          },
        ],
        "content": "l1.2",
        "payload": {
          "lines": "7,9",
          "tag": "li",
        },
      },
    ],
    "content": "l1",
    "payload": {
      "lines": "5,9",
      "tag": "li",
    },
  },
}
`;

exports[`content with line endings of CRLF 1`] = `
{
  "content": "---
markmap:
  color: blue
---

- l1
  - l1.1
  - l1.2
    - l1.2.1
",
  "features": {},
  "frontmatter": {
    "markmap": {
      "color": [
        "blue",
      ],
    },
  },
  "frontmatterInfo": {
    "lines": 4,
    "offset": 35,
  },
  "parserOptions": {},
  "root": {
    "children": [
      {
        "children": [],
        "content": "l1.1",
        "payload": {
          "lines": "6,7",
          "tag": "li",
        },
      },
      {
        "children": [
          {
            "children": [],
            "content": "l1.2.1",
            "payload": {
              "lines": "8,9",
              "tag": "li",
            },
          },
        ],
        "content": "l1.2",
        "payload": {
          "lines": "7,9",
          "tag": "li",
        },
      },
    ],
    "content": "l1",
    "payload": {
      "lines": "5,9",
      "tag": "li",
    },
  },
}
`;

exports[`content with only katex enabled 1`] = `
{
  "content": "---
markmap:
  color: blue
---

- $x = {-b \\pm \\sqrt{b^2-4ac} \\over 2a}$
",
  "features": {
    "katex": true,
  },
  "frontmatter": {
    "markmap": {
      "color": [
        "blue",
      ],
    },
  },
  "frontmatterInfo": {
    "lines": 4,
    "offset": 31,
  },
  "parserOptions": {},
  "root": {
    "children": [],
    "content": "<span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>x</mi><mo>=</mo><mfrac><mrow><mo>&#x2212;</mo><mi>b</mi><mo>&#xb1;</mo><msqrt><mrow><msup><mi>b</mi><mn>2</mn></msup><mo>&#x2212;</mo><mn>4</mn><mi>a</mi><mi>c</mi></mrow></msqrt></mrow><mrow><mn>2</mn><mi>a</mi></mrow></mfrac></mrow><annotation encoding="application/x-tex">x = {-b \\pm \\sqrt{b^2-4ac} \\over 2a}</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.4306em;"></span><span class="mord mathnormal">x</span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">=</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:1.3845em;vertical-align:-0.345em;"></span><span class="mord"><span class="mord"><span class="mopen nulldelimiter"></span><span class="mfrac"><span class="vlist-t vlist-t2"><span class="vlist-r"><span class="vlist" style="height:1.0395em;"><span style="top:-2.655em;"><span class="pstrut" style="height:3em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mtight"><span class="mord mtight">2</span><span class="mord mathnormal mtight">a</span></span></span></span><span style="top:-3.23em;"><span class="pstrut" style="height:3em;"></span><span class="frac-line" style="border-bottom-width:0.04em;"></span></span><span style="top:-3.394em;"><span class="pstrut" style="height:3em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mtight"><span class="mord mtight">&#x2212;</span><span class="mord mathnormal mtight">b</span><span class="mbin mtight">&#xb1;</span><span class="mord sqrt mtight"><span class="vlist-t vlist-t2"><span class="vlist-r"><span class="vlist" style="height:0.9221em;"><span class="svg-align" style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mtight" style="padding-left:0.833em;"><span class="mord mtight"><span class="mord mathnormal mtight">b</span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7463em;"><span style="top:-2.786em;margin-right:0.0714em;"><span class="pstrut" style="height:2.5em;"></span><span class="sizing reset-size3 size1 mtight"><span class="mord mtight">2</span></span></span></span></span></span></span></span><span class="mbin mtight">&#x2212;</span><span class="mord mtight">4</span><span class="mord mathnormal mtight">a</span><span class="mord mathnormal mtight">c</span></span></span><span style="top:-2.8821em;"><span class="pstrut" style="height:3em;"></span><span class="hide-tail mtight" style="min-width:0.853em;height:1.08em;"><svg xmlns="http://www.w3.org/2000/svg" width="400em" height="1.08em" viewBox="0 0 400000 1080" preserveAspectRatio="xMinYMin slice"><path d="M95,702
c-2.7,0,-7.17,-2.7,-13.5,-8c-5.8,-5.3,-9.5,-10,-9.5,-14
c0,-2,0.3,-3.3,1,-4c1.3,-2.7,23.83,-20.7,67.5,-54
c44.2,-33.3,65.8,-50.3,66.5,-51c1.3,-1.3,3,-2,5,-2c4.7,0,8.7,3.3,12,10
s173,378,173,378c0.7,0,35.3,-71,104,-213c68.7,-142,137.5,-285,206.5,-429
c69,-144,104.5,-217.7,106.5,-221
l0 -0
c5.3,-9.3,12,-14,20,-14
H400000v40H845.2724
s-225.272,467,-225.272,467s-235,486,-235,486c-2.7,4.7,-9,7,-19,7
c-6,0,-10,-1,-12,-3s-194,-422,-194,-422s-65,47,-65,47z
M834 80h400000v40h-400000z"/></svg></span></span></span><span class="vlist-s">&#x200b;</span></span><span class="vlist-r"><span class="vlist" style="height:0.1179em;"><span></span></span></span></span></span></span></span></span></span><span class="vlist-s">&#x200b;</span></span><span class="vlist-r"><span class="vlist" style="height:0.345em;"><span></span></span></span></span></span><span class="mclose nulldelimiter"></span></span></span></span></span></span>",
    "payload": {
      "lines": "5,6",
      "tag": "li",
    },
  },
}
`;

exports[`content with only katex enabled 2`] = `
{
  "scripts": [
    {
      "data": {
        "fn": [Function],
        "getParams": [Function],
      },
      "type": "iife",
    },
    {
      "data": {
        "defer": true,
        "src": "https://cdn.jsdelivr.net/npm/webfontloader@1.6.28/webfontloader.js",
      },
      "type": "script",
    },
  ],
  "styles": [
    {
      "data": {
        "href": "https://cdn.jsdelivr.net/npm/katex@0.16.18/dist/katex.min.css",
      },
      "type": "stylesheet",
    },
  ],
}
`;

exports[`content without frontmatter 1`] = `
{
  "content": "- l1
  - l1.1
  - l1.2
    - l1.2.1
",
  "features": {},
  "parserOptions": undefined,
  "root": {
    "children": [
      {
        "children": [],
        "content": "l1.1",
        "payload": {
          "lines": "1,2",
          "tag": "li",
        },
      },
      {
        "children": [
          {
            "children": [],
            "content": "l1.2.1",
            "payload": {
              "lines": "3,4",
              "tag": "li",
            },
          },
        ],
        "content": "l1.2",
        "payload": {
          "lines": "2,4",
          "tag": "li",
        },
      },
    ],
    "content": "l1",
    "payload": {
      "lines": "0,4",
      "tag": "li",
    },
  },
}
`;

exports[`custom url provider 1`] = `
{
  "scripts": [
    {
      "data": {
        "fn": [Function],
        "getParams": [Function],
      },
      "type": "iife",
    },
    {
      "data": {
        "defer": true,
        "src": "/local/webfontloader@1.6.28/webfontloader.js",
      },
      "type": "script",
    },
  ],
  "styles": [
    {
      "data": {
        "href": "/local/katex@0.16.18/dist/katex.min.css",
      },
      "type": "stylesheet",
    },
    {
      "data": {
        "href": "/local/@highlightjs/cdn-assets@11.11.1/styles/default.min.css",
      },
      "type": "stylesheet",
    },
  ],
}
`;

exports[`images 1`] = `
{
  "content": "![](image1.png)

![](image2.png)
",
  "features": {},
  "parserOptions": undefined,
  "root": {
    "children": [
      {
        "children": [],
        "content": "<img src="image1.png" alt>",
        "payload": {
          "lines": "0,1",
          "tag": "img",
        },
      },
      {
        "children": [],
        "content": "<img src="image2.png" alt>",
        "payload": {
          "lines": "2,3",
          "tag": "img",
        },
      },
    ],
    "content": "",
  },
}
`;

exports[`links - target=_blank 1`] = `
{
  "content": "## heading 1

- [Google](https://www.google.com)
",
  "features": {},
  "parserOptions": undefined,
  "root": {
    "children": [
      {
        "children": [],
        "content": "<a href="https://www.google.com" target="_blank">Google</a>",
        "payload": {
          "lines": "2,3",
          "tag": "li",
        },
      },
    ],
    "content": "heading 1",
    "payload": {
      "lines": "0,1",
      "tag": "h2",
    },
  },
}
`;

exports[`magic comments 1`] = `
{
  "content": "## heading 1 <!-- markmap: fold -->

- 1 <!-- markmap: foldAll -->
  - 1.1
  - 1.2
- 2
  - 2.1
  - 2.2
",
  "features": {},
  "parserOptions": undefined,
  "root": {
    "children": [
      {
        "children": [
          {
            "children": [],
            "content": "1.1",
            "payload": {
              "lines": "3,4",
              "tag": "li",
            },
          },
          {
            "children": [],
            "content": "1.2",
            "payload": {
              "lines": "4,5",
              "tag": "li",
            },
          },
        ],
        "content": "1",
        "payload": {
          "fold": 2,
          "lines": "2,5",
          "tag": "li",
        },
      },
      {
        "children": [
          {
            "children": [],
            "content": "2.1",
            "payload": {
              "lines": "6,7",
              "tag": "li",
            },
          },
          {
            "children": [],
            "content": "2.2",
            "payload": {
              "lines": "7,8",
              "tag": "li",
            },
          },
        ],
        "content": "2",
        "payload": {
          "lines": "5,8",
          "tag": "li",
        },
      },
    ],
    "content": "heading 1",
    "payload": {
      "fold": 1,
      "lines": "0,1",
      "tag": "h2",
    },
  },
}
`;

exports[`plugins 1`] = `
{
  "scripts": [
    {
      "data": {
        "fn": [Function],
        "getParams": [Function],
      },
      "type": "iife",
    },
    {
      "data": {
        "defer": true,
        "src": "https://cdn.jsdelivr.net/npm/webfontloader@1.6.28/webfontloader.js",
      },
      "type": "script",
    },
  ],
  "styles": [
    {
      "data": {
        "href": "https://cdn.jsdelivr.net/npm/katex@0.16.18/dist/katex.min.css",
      },
      "type": "stylesheet",
    },
    {
      "data": {
        "href": "https://cdn.jsdelivr.net/npm/@highlightjs/cdn-assets@11.11.1/styles/default.min.css",
      },
      "type": "stylesheet",
    },
  ],
}
`;

exports[`tables 1`] = `
{
  "content": "| products | price |
|-|-|
| apple | 10 |
| banana | 12 |
",
  "features": {},
  "parserOptions": undefined,
  "root": {
    "children": [],
    "content": "<table data-lines="0,4">
<thead data-lines="0,1">
<tr data-lines="0,1">
<th>products</th>
<th>price</th>
</tr>
</thead>
<tbody data-lines="2,4">
<tr data-lines="2,3">
<td>apple</td>
<td>10</td>
</tr>
<tr data-lines="3,4">
<td>banana</td>
<td>12</td>
</tr>
</tbody>
</table>",
    "payload": {
      "lines": "0,4",
      "tag": "table",
    },
  },
}
`;
